--- a/capstone.css
+++ b/capstone.css
@@ -17,6 +17,66 @@
     width: 6%;
     margin-right: 2%;
 }
+
+/* drop down style sheet */
+.dropdown a:hover 
+{
+    background-color: rgb(223, 76, 76) !important;
+}
+
+  
+.dropbtn:hover, .dropbtn:focus 
+{
+   background-color: #3e8e41;
+}
+  
+#myInput /* search box */
+{
+    box-sizing: border-box;
+    background-image: url('searchicon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 2px solid rgb(68, 5, 5);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+  
+#myInput:focus 
+{
+    outline: 3px solid #ddd;
+}
+  
+.dropdown
+{
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content 
+{    
+    background-color: #f6f6f6;
+    opacity: 0.75;
+    min-width: 230px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+
+    z-index: 1;
+}
+  
+.dropdown-content a 
+{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+/* end of dropdown stylesheet */
 .submitPW
 {
     margin-top: 2%;
@@ -30,10 +90,15 @@
 {
     text-align: center;
 }
+.retPats
+{
+    padding-right: 37% !important;
+    padding-left: 37% !important;
+
+}
 .infoDiv
 {
     border-radius: 12px;
-    /* border: 2px solid rgb(87, 10, 10) !important; */
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 1%;
