--- a/capstone.css
+++ b/capstone.css
@@ -146,7 +146,15 @@ hr
     padding: 1px !important;
 
 }
-
+.upper_portion_admin
+{
+    text-align: center;
+    width: 80% !important;
+    margin-right: 5% !important;
+    margin-left: 5% !important;
+    padding-right: 3% !important;
+    padding-left: 3% !important;
+}
 .midbigger
 {
     width: 200% !important;
