fixed graph presentation

--- a/capstone.css
+++ b/capstone.css
@@ -8,9 +8,10 @@
     margin-left: 2% !important;
     margin-right: 2% !important;
     background-color: white !important;
+    height: 100% !important;
 
 }
-.tryheight
+.testheight
 {
     height: 100% !important;
 }
