--- a/capstone.css
+++ b/capstone.css
@@ -1,13 +1,6 @@
 
 /* ------------ CODE FOR REPORT PAGE -------------- */
-.inv_edit_btn
-{
-    /*width: 20% !important;*/
-}
-.inv_label
-{
-    width: 40% !important;
-}
+.inv_label{width: 40% !important;}
 .whiteOut
 {
     background-color: white !important ;
@@ -59,15 +52,24 @@
     background-color: white !important;
 
 }
-.testheight
-{
-    height: 100% !important;
-}
-.body_report
-{
-    padding: 5% !important;
-}
+.body_report{padding: 5% !important;}
 /* ------------ CODE FOR INDEX [REGISTRATION] PAGE -------------- */
+.body_noMarket
+{
+    text-align: center;
+    background-image: linear-gradient(  rgb(255, 191, 128), rgb(255, 153, 51)) !important;
+
+}
+.midPageMsg
+{
+    width: 60% !important;
+    text-align: center;
+    padding-top: 30% !important;
+    padding-bottom: 30% !important;
+    height: 100% !important;
+    margin-top: 30% !important;
+    margin-bottom:  30% !important;
+}
 .ddOption
 {
     margin-left: 20% !important;
@@ -75,10 +77,7 @@
 }
 
 /* NOW TO BE USED BY Market PAGE */
-.btn
-{
-    border: 1px solid black !important;
-}
+.btn{border: 1px solid black !important;}
 .lpcLogo
 {
     border-radius: 3px;
@@ -94,19 +93,9 @@
     width: 6%;
     margin-right: 2%;
 }
-
 /* drop down style sheet */
-.dropdown a:hover 
-{
-    background-color: rgb(223, 76, 76) !important;
-}
-
-  
-.dropbtn:hover, .dropbtn:focus 
-{
-   background-color: #3e8e41;
-}
-  
+.dropdown a:hover {background-color: rgb(223, 76, 76) !important;} 
+.dropbtn:hover, .dropbtn:focus {background-color: #3e8e41;}
 #myInput /* search box */
 {
     box-sizing: border-box;
@@ -121,10 +110,7 @@
     border-bottom-right-radius: 4px;
 }
   
-#myInput:focus 
-{
-    outline: 3px solid #ddd;
-}
+#myInput:focus {outline: 3px solid #ddd;}
 .instructions
 {
     margin-right:20% !important;
@@ -145,8 +131,6 @@
     border: 1px solid #ddd;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-
-
     z-index: 1;
 }
   
@@ -158,19 +142,13 @@
     display: block;
 }
 /* end of dropdown stylesheet */
-.submitPW
-{
-    margin-top: 2%;
-}
+.submitPW{margin-top: 2%;}
 .body, .body_report
 {
     text-align: center;
     background-image: linear-gradient(  rgb(235, 154, 154), rgb(207, 73, 73)) !important;
 }
-.mid
-{
-    text-align: center;
-}
+.mid{text-align: center;}
 .retPats
 {
     padding-right: 37% !important;
@@ -186,7 +164,6 @@
     padding-bottom: 1%;
     margin-left: 25%;
     margin-right: 25%;
-
 }
 .admin
 {
@@ -199,33 +176,16 @@
     margin-left: 3% !important;
     margin-right: 3% !important;
     padding: 1% !important;
-
-}
-.body
-{
-    margin-left: 5% !important;
-    margin-right: 5% !important;
 }
 .upperPortion
 {
     margin-left: 5% !important;
     margin-right: 5% !important;
 }
-.optional
-{
-    border: 1.5px solid black !important;
-}
-.mandatory
-{
-    border: 1.5px solid red !important;
-}
-input:not(:placeholder-shown) {
-    border-color: hsl(0, 76%, 50%) !important;
-}
-input:not(:placeholder-shown) 
-{
-    border-color: hsl(120, 76%, 50%) !important;
-}
+.optional{border: 1.5px solid black !important;}
+.mandatory{border: 1.5px solid red !important;}
+input:not(:placeholder-shown) {border-color: hsl(0, 76%, 50%) !important;}
+input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;}
 hr
 {
     width: 65% !important;
@@ -255,22 +215,10 @@ hr
     padding: 5% !important;
     height: 5% !important;
 }
-.blackback
-{
-    background-color: #90aecc !important;
-}
-.btn-success
-{
-    background-color: #28a745;
-}
-.checkID
-{
-    display: inline-block !important;
-}
-.checkIDInput
-{
-   width: 150% !important;
-}
+.blackback{background-color: #90aecc !important;}
+.btn-success{background-color: #28a745;}
+.checkID{display: inline-block !important;}
+.checkIDInput{width: 150% !important;}
 .radioBtn
 {
     margin-left: 35% !important;
