--- a/capstone.css
+++ b/capstone.css
@@ -1,5 +1,11 @@
-
+html, body
+{
+    margin: 0;
+    height: 100%;
+}
 /* ------------ CODE FOR REPORT PAGE -------------- */
+.w25{width: 25% !important;}
+.w55{width: 35% !important;}
 .inv_label{width: 40% !important;}
 .whiteOut
 {
@@ -57,7 +63,7 @@
 .body_noMarket
 {
     text-align: center;
-    background-image: linear-gradient(  rgb(255, 191, 128), rgb(255, 153, 51)) !important;
+    background-color: linear-gradient(rgb(255, 191, 128), rgb(255, 153, 51)) !important;
 
 }
 .midPageMsg
@@ -75,7 +81,6 @@
     margin-left: 20% !important;
     padding: 1.5% !important;
 }
-
 /* NOW TO BE USED BY Market PAGE */
 .btn{border: 1px solid black !important;}
 .lpcLogo
@@ -84,7 +89,6 @@
     height: 10%;
     width: 20%;
 }
-
 .lpcsgLogo
 {
     border: 2px solid black !important;
