preparation for pdf generation

--- a/capstone.css
+++ b/capstone.css
@@ -137,7 +137,6 @@ html, body
     border-bottom-right-radius: 10px;
     z-index: 1;
 }
-  
 .dropdown-content a 
 {
     color: black;
@@ -175,6 +174,8 @@ html, body
 {
     border: 1.5px solid black !important;
     margin: 1% !important;
+    margin-right: 3% !important;
+    margin-left: 3% !important;
 }
 .marketPage
 {
