--- a/capstone.css
+++ b/capstone.css
@@ -14,6 +14,11 @@ html, body
     border-right: 2px solid black !important ;
     border-left: 2px solid black !important ;
 }
+.goToAdminForm
+{
+    margin-right: 35% !important;
+    margin-left: 35% !important;
+}
 .inv_box_class
 {
     text-align: center !important;
