--- a/capstone.css
+++ b/capstone.css
@@ -88,20 +88,6 @@ html, body
 }
 /* NOW TO BE USED BY Market PAGE */
 .btn{border: 1px solid black !important;}
-.lpcLogo
-{
-    border-radius: 3px;
-    height: 10%;
-    width: 20%;
-}
-.lpcsgLogo
-{
-    border: 2px solid black !important;
-    border-radius: 150px !important;
-    height: 10%;
-    width: 6%;
-    margin-right: 2%;
-}
 /* drop down style sheet */
 .dropdown a:hover {background-color: rgb(223, 76, 76) !important;} 
 .dropbtn:hover, .dropbtn:focus {background-color: #3e8e41;}
@@ -165,7 +151,7 @@ html, body
     margin-left: 40%;
 
 }
-.operational{margin-top: 20% !important;}
+.operational{margin-top: 2% !important;}
 .infoDiv
 {
     border-radius: 12px;
@@ -195,7 +181,8 @@ html, body
     margin-left: 5% !important;
     margin-right: 5% !important;
     border: 1px solid black !important;
-    background-color: white!important;
+    background-color: rgba(255, 245, 245, 80)!important;
+    padding: 2% !important;
 }
 .centrize {text-align: center !important;}
 .optional{border: 1.5px solid black !important;}
