--- a/capstone.css
+++ b/capstone.css
@@ -51,6 +51,17 @@ hr
     background-image: linear-gradient(rgb(235, 154, 154), rgb(207, 73, 73));
     background-attachment: fixed;
 }
+.footer
+{
+    background-color: white;
+    padding-top: 1% !important;
+    padding-bottom: 1% !important;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    margin-bottom: 1% !important;
+    text-align: center;
+    margin-top: 2% !important;
+}
 .w20
 {
     margin-right: 40%;
