unchecked deactivation method

--- a/capstone.css
+++ b/capstone.css
@@ -333,31 +333,43 @@ hr
 .add-volunteer-input:focus {
     outline: none !important;
 }
-.add-volunteer-btn, .volunteer-email-list {
+.add-volunteer-btn, .volunteer-email-list, .show-deactivated-volunteers {
     padding-right: 5% !important;
     padding-left: 5% !important;
     padding-bottom: 0.85% !important;
     padding-top: 0.85% !important;
-    background-image: linear-gradient(to right, #43c54d 0%, #7fd88b 51%, #79be7f 100%);
+    background-image: linear-gradient(to right, #29dd38 0%, #71ec82 51%, #29dd38 100%);
     text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
-    color: white;
-    text-shadow: 0px 0px 10px rgba(0,0,0,1.5);
-    border-radius: 3px !important;
-    border: 3% solid black !important;
+    color: white !important;
+    text-emphasis-color: black !important;
+    border-radius: 5px !important;
+    border: 1.25px solid black !important;
     width: 80% !important;
-    /* border-color: -internal-light-dark-color(#79be7f, #7fd88b) !important; */
+    font-weight: bold !important;
 }
-.add-volunteer-btn:hover, .volunteer-email-list:hover {
+.show-deactivated-volunteers {
+    background-image: linear-gradient(to right, #b42323 0%, #d46464 51%, #b42323 100%);
+}
+.add-volunteer-btn:hover, .volunteer-email-list:hover, .show-deactivated-volunteers {
     background-position: right center !important;
+    text-shadow: 0px 0px 10px rgba(255,255,255,3.5);
+    transition: all 0.5s ease-in-out !important;
 }
-.volunteer-email-list {
+.volunteer-email-list, .show-deactivated-volunteers {
     float: right !important;
-    margin-right: 5% !important;
+    margin-right: 1.5%;
     width: auto !important;
     font-size: 90% !important;
     padding: 0.25% 0.75% 0.25% 0.75% !important;
+}
+.volunteer-email-list {
+    margin-right: 3.5% !important;
+}
+.volunteer-section-title {
+    float: left;
+    margin-left: 5% !important;
 }
 
 
